# kv-esp32

./: .gitignore  CMakeLists.txt  MEMORY_ERRORS.md  README.md  WIRING.md
components/ws2812b/: CMakeLists.txt  ws2812b.c
components/ws2812b/include/: ws2812b.h
main/: CMakeLists.txt  KV.c  Kconfig.projbuild  blinking.c  color.h  main.c
